# CIVIL-459-DLAV

./: .gitignore  pyproject.toml
graded_homework/hw1/: CNN Exercice.ipynb
graded_homework/hw1_part2/: hw1_part2.ipynb
homeworks/hw1/: Exercise 1.ipynb  Exercise 2.ipynb  Exercise 3.ipynb  Exercise 4_Linear_Regression.ipynb
homeworks/hw2/: Evaluator.ipynb  Linear Classification pytorch.ipynb  Softmax.ipynb  Tutorial 1.ipynb  Tutorial 2.ipynb  softmax_weights.pkl
