[project]
name = "CIVIL-459-DLAV"
version = "1.0.0"
description = "My resources for EPFL's Deep Learning for Autonomous Vehicles course."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "imageio>=2.37.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.66.5",
    "ultralytics>=8.4.37",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
